manifests/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-sample
  template:
    metadata:
      labels:
        app: cloud-sample
    spec:
      containers:
        - name: cloud-sample
          image: acrcloudbizcecomm.azurecr.io/82210889/cloud-sample
          ports:
            - containerPort: 8080

          # ConfigMap(application.yml) 마운트
          volumeMounts:
            - name: config-volume
              mountPath: /config/application.yml
              subPath: application.yml

            # PVC 마운트
            - name: pvc-volume
              mountPath: /mnt/cloud-sample

      #  볼륨 정의
      volumes:
        - name: config-volume
          configMap:
            name: cloud-sample-config

        - name: pvc-volume
          persistentVolumeClaim:
            claimName: cloud-sample-pvc
