manifests/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sampleapp1-82210889
  namespace: 82210889
spec:
  selector:
    app: sampleapp1-82210889
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
