manifests/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sampleapp1-82210889-ingress
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: cloud-sample.82210889.ce.kubepia.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sampleapp1-82210889
            port:
              number: 80
